# my-learn-wgpu

./: Cargo.toml  README.md  index.html
pkg/: package.json  test.js  wgpu_1.d.ts  wgpu_1.js  wgpu_1_bg.wasm  wgpu_1_bg.wasm.d.ts
src/: camera.rs  challenge.wgsl  instance.rs  lib.rs  main.rs  model.rs  resources.rs  shader.wgsl  state.rs  texture.rs  vertices.rs
src/meshes/: cube.rs  initialize_mesh.rs
src/res/: cube.mtl
