[package]
name = "wgpu_1"
version = "0.1.0"
edition = "2021"

[lib]
crate-type=["cdylib", "rlib"]

[dependencies]
cfg-if = "1.0.0"
log = "0.4.17"
pollster = "0.3.0"
tracing = "0.1.37"
tracing-subscriber = {version ="0.3.16", features=["time"]}
wgpu = "0.15.1"
winit = "0.28.1"


[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
console_log = "0.2.0"
wgpu = { version = "0.15.1", features = ["webgl"]}
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4.30"
web-sys = { version = "0.3", features = [
    "Document",
    "Window",
    "Element",
]}

 

 
