[package]
name = "wgpu_1"
version = "0.1.0"
edition = "2021"

[lib]
crate-type=["cdylib", "rlib"]

[dependencies]
anyhow = "1.0.69"
bytemuck = {version = "1.13.0", features = [ "derive" ] }
cfg-if = "1.0.0"
cgmath = "0.18.0"
image = { version = "0.24.5", features = ["png", "jpeg"] }
log = "0.4.17"
pollster = "0.3.0"
rand = "0.8.5"
tobj = { version = "3.2.4", features = ["async"] }
tracing = "0.1.37"
tracing-subscriber = {version ="0.3.16", features=["time"]}
wgpu = "0.15.1"
winit = "0.28.1"


[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
console_log = "0.2.0"
wgpu = { version = "0.15.1", features = ["webgl"]}
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4.30"
web-sys = { version = "0.3", features = [
    "Document",
    "Window",
    "Element",
    "Location",
]}
reqwest = "0.11.14"


[build-dependencies]
anyhow = "1.0.69"
fs_extra = "1.3.0"
glob = "0.3.1"

 

 
